--- a/fileMonitoring/templates/base.html
+++ b/fileMonitoring/templates/base.html
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">DMS</a>
+      <a class="navbar-brand fw-bold" href="{% url 'dashboard' %}">DMS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
       </button>
