--- a/fileMonitoring/templates/documents/upload.html
+++ b/fileMonitoring/templates/documents/upload.html
@@ -11,8 +11,8 @@
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="mb-3">
-            <label for="name" class="form-label">Document Name</label>
-            <input type="text" name="name" id="name" class="form-control" required>
+            <label for="name" class="form-label">Document Name (optional)</label>
+            <input type="text" name="name" id="name" class="form-control" placeholder="Leave blank to use original filename">
           </div>
           <div class="mb-3">
             <label for="folder" class="form-label">Select Folder (optional)</label>
