--- a/fileMonitoring/templates/dashboard.html
+++ b/fileMonitoring/templates/dashboard.html
@@ -11,8 +11,8 @@
         <ul class="nav flex-column">
           <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">📊 Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'upload_document' %}">📁 Upload Document</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">📂 My Files</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">🗑️ Trash</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'my_files' %}">📂 My Files</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'trash' %}">🗑️ Trash</a></li>
           <li class="nav-item"><a class="nav-link" href="#">📈 Analytics</a></li>
         </ul>        
       </div>
@@ -33,7 +33,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
               {{ doc.name }}
               <div>
-                <a href="{{ doc.file.url }}" target="_blank" class="btn btn-sm btn-outline-primary">View</a>
+                <a href="{% url 'smart_preview' doc.id %}" target="_blank" class="btn btn-sm btn-outline-primary">View</a>
                 <a href="{{ doc.file.url }}" download class="btn btn-sm btn-outline-secondary">Download</a>
               </div>
             </li>
