--- a/fileMonitoring/static/css/style.css
+++ b/fileMonitoring/static/css/style.css
@@ -1,3 +1,13 @@
 .alertMsg{
     text-align: center;
 }
+.catgNameInput{
+    width: 40%;
+}
+.btnsLinks{
+    display: flex;
+}
+.folderCatlst{
+    width: 60%;
+    margin-top: 5px;
+}
