--- a/fileMonitoring/templates/documents/my_files.html
+++ b/fileMonitoring/templates/documents/my_files.html
@@ -6,6 +6,10 @@
 
 {% if files %}
   <div class="table-responsive">
+    <form method="get" class="mb-3 d-flex" role="search">
+      <input type="text" name="q" value="{{ query }}" class="form-control me-2" style="width:60%;"  placeholder="Search by name, folder, or category">
+      <button class="btn btn-outline-primary">Search</button>
+    </form>
     <table class="table table-striped table-bordered align-middle">
       <thead class="table-light">
         <tr>
