--- a/fileMonitoring/templates/dashboard.html
+++ b/fileMonitoring/templates/dashboard.html
@@ -13,6 +13,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'view_folders' %}">🗂️ Folders </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'shared_documents' %}">
+              🔗 Shared Documents
+            </a>
+          </li>
           <li class="nav-item"><a class="nav-link" href="{% url 'upload_document' %}">📁 Upload Document</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'my_files' %}">📂 My Files</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'trash' %}">🗑️ Trash</a></li>
