--- a/fileMonitoring/templates/documents/my_files.html
+++ b/fileMonitoring/templates/documents/my_files.html
@@ -43,8 +43,10 @@
           <td>
             <a href="{% url 'smart_preview' file.id  %}" class="btn btn-sm btn-outline-primary">View</a>
             <a href="{{ file.file.url }}" class="btn btn-sm btn-outline-secondary" download>Download</a>
+            <a href="{% url 'integrity_history' file.id %}" class="btn btn-sm btn-outline-dark">Integrity Log</a>
             <a href="{% url 'upload_new_version' file.id %}" class="btn btn-sm btn-outline-warning">Upload Version</a>
             <a href="{% url 'document_versions' file.id %}" class="btn btn-sm btn-outline-info">Versions</a>
+            <a href="{% url 'access_log' file.id %}" class="btn btn-sm btn-outline-dark">Access Log</a>
             <form method="POST" action="{% url 'delete_file' file.id %}" style="display:inline;">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-sm btn-outline-danger"
